--- a/DistanceLearning/appsettings.json
+++ b/DistanceLearning/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.;Database=DistanceLearningDB;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=.;Database=DistanceLearningDB;Trusted_Connection=True;TrustServerCertificate=True;",
+        "LiteDBConnection": "Data Source=DistanceLearning.db"
     },
     "Logging": {
         "LogLevel": {
